tests/models/struct/unnamed/f32/pass/ge.rs
use dade::model;
#[model]
struct TestModel (
   #[field(ge = 2.0)]
    f32
);
fn main() {}
