tests/models/struct/unnamed/f32/fail/le.rs
use dade::model;
#[model]
struct TestModel (
   #[field(le = 2)]
    f32
);
fn main() {}
